# Somelewyshi

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adapters/: broadcast.py  discord.py  llm.py  predict.py  trade.py
config/: schemas.py  settings.toml
db/: engine.py  models.py
orchestrator/: cli.py  pipeline.py  scheduler.py  smart_daemon.py
scripts/: dashboard.py  start_mirofish.py  test_mirofish_connection.py  verify.py
tests/: conftest.py  test_e2e.py  test_fast_loop.py  test_optimizer.py  test_repricing.py  test_risk.py  test_strategy.py  test_updater.py
trading/: btc_feed.py  calibration.py  client.py  compounder.py  discovery.py  fast_loop.py  market_classifier.py  models.py  optimizer.py  position_monitor.py  positions.py  repricing.py  research.py  resolution.py  risk.py  scanner.py  slippage.py  strategy.py  updater.py
